simple ui with input field, button, and textarea where the generated pojos are shown

--- a/index.html
+++ b/index.html
@@ -4,5 +4,13 @@
     </head>
     <body>
         <h1> jsToPojo </h1>
+        <p>enter json</p>
+        <form>
+            <input type="text" id="json" ><br><br>
+            <input type="button" value="Click me" onclick="parse()">
+        </form>
+        <textarea id="pojos">
+
+        </textarea>
     </body>
 </html>
