there now is a distinction between float an integer types

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <div class="col s12">Insert JSON to convert</div>
             <div class="col s6">
                 <div class="input-field col s12">
-                    <textarea id="json" placeholder="JSON" class="materialize-textarea" style="height: 60vh; width:100%; border-color: #208C81; border-style: solid; border-width: 1px; overflow-y: scroll; font-family: 'Courier New'; font-size:1.8vh; padding: 10px;"  ></textarea>
+                    <textarea id="json" placeholder="JSON" class="materialize-textarea" style="height: 60vh; width:100%; border-color: #208C81; border-style: solid; border-width: 1px; overflow-y: scroll; font-family: 'Courier New'; font-size:1.8vh; padding: 10px; max-height: 60vh;"  ></textarea>
                     <!-- <label for="json" style="margin-left: 3vh;;" >JSON</label>-->
                 </div>
             </div>
 
             <div class="col s6">
                 <div class="input-field col s12">
-                    <textarea id="pojos" placeholder="Some Vanilla Java Thing" readonly class="materialize-textarea"  style="height: 60vh; width:100%; border-color: #A6322E; border-style: solid; border-width: 1px; overflow-y: scroll; font-family: 'Courier New'; font-size:1.8vh; padding: 10px;"  ></textarea>
+                    <textarea id="pojos" placeholder="Some Vanilla Java Thing" readonly class="materialize-textarea"  style="height: 60vh; width:100%; border-color: #A6322E; border-style: solid; border-width: 1px; overflow-y: scroll; font-family: 'Courier New'; font-size:1.8vh; padding: 10px; max-height: 60vh;"  ></textarea>
                     <!--<label for="pojos" style="margin-left: 3vh;;" >Some Vanilla Java Thing</label>-->
                 </div>
             </div>
