updated copyright notice

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <footer class="page-footer bottom-footer" style="padding-top: 0px; height: 6vh; background: #282c35;">
             <div class="footer-copyright">
               <div class="container">
-              © 2020 Thomas Pokorny
+              © 2020 Thomas Pokorny, Elias Gabl
               <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
               </div>
             </div>
