added github stars button to footer

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
             <div class="footer-copyright">
               <div class="container">
               © 2020 Thomas Pokorny, Elias Gabl
-              <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+              
+              <div class="grey-text text-lighten-4 right">
+                <iframe src="https://ghbtns.com/github-btn.html?user=ThomasPokorny&repo=Json2Pojo&type=star&count=true&size=large&v=2" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
+              </div>
               </div>
             </div>
           </footer>
