splited into the core factory and main js files

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        <script src="js.to.pojo.js"></script>
-        
+        <script src="json.to.pojo.js"></script>
+        <script src="main.js"></script>
+
         <style>
           ::placeholder { /* Most modern browsers support this now. */
             color:    #5a5a5a;
