added minified version of js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        <script src="json.to.pojo.js"></script>
+        <script src="json.to.pojo.min.js"></script>
         <script src="main.js"></script>
 
         <style>
